--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Welcome lucky user!</title>
 	<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 
-	<script type="text/javascript" src="termlib.js"></script>
+	<script type="text/javascript" src="http://www.masswerk.at/termlib/compacted/termlib_min.js"></script>
 	<script type="text/javascript" src="term.js"></script>
 	<link rel="stylesheet" href="term.css" type="text/css" />
 </head>
